--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ body{
   background: whitesmoke;
   color: black;
 }
+h1{
+  color: black;
+}
 .container{
   max-width: 1100px;
   margin: auto;
@@ -30,9 +33,12 @@ body{
 }
 .restart-btn{
   display: inline-block;
+  border-radius: 50%;
   background: var(--light-color);
   color: black;
   padding: .4rem 1.3rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
   cursor: pointer;
   outline: none;
   border: none;
@@ -59,7 +65,7 @@ body{
   background: var(--primary-color);
 }
 .score p:last-child {
-  background: var(--primary-color);
+  background: var(--lose-color);
 }
 .choices {
   display: grid;
